fix(scrollbar): added some css to style the scrollbar in firefox

--- a/src/components/Feed/Feed.module.css
+++ b/src/components/Feed/Feed.module.css
@@ -67,6 +67,8 @@
   overflow-y: scroll;
   overflow-x: hidden;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #9c9c9c #cdcfd5;
 }
 
 .streamContainer::-webkit-scrollbar {
